--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
@@ -11,8 +11,7 @@
             <label class="ui right ">ชื่อกระดาษทำการ</label>
           </div>
           <div class="ten wide field ">
-            <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskHrdPaperName" id="riskHrdPaperName"
-              [(ngModel)]="riskHrdPaperName">
+            <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskInfPaperName" id="riskInfPaperName" [(ngModel)]="riskInfPaperName">
           </div>
 
         </div>
@@ -57,13 +56,13 @@
               <label>ชื่อระบบสารสนเทศ</label>
             </div>
             <div class="four wide field ">
-              <input type="text" placeholder="ชื่อระบบสารสนเทศ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" >
+              <input type="text" placeholder="ชื่อระบบสารสนเทศ" class="custom" name="riskAssInfOtherName" id="riskAssInfOtherName" [(ngModel)]="riskAssInfOtherName" >
             </div>
             <div class="two wide field ">
               <label>ค่าความเสี่ยง</label>
             </div>
             <div class="four wide field ">
-              <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="userCheck" id="userCheck" [(ngModel)]="userCheck">
+              <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="riskCost" id="riskCost" [(ngModel)]="riskCost">
             </div>
           </div>
           <br>
@@ -140,95 +139,4 @@
     </div>
   </div>
 
-</div>
-
-<div class="ui fullscreen modal hidden transition " id="ConditionRL">
-  <div class="header " style="text-align: center" >กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</div>
-  <div class="content">
-      <div class="sixteen wide column">
-          <table class="ui small celled table aligned hover">
-            <thead>
-              <tr>
-                <th style="text-align: center !important">ที่</th>
-                <th style="text-align: center !important" class="two wide field ">เงื่อนไข</th>
-                <th style="text-align: center !important" >ค่าเริ่มต้น</th>
-                <th style="text-align: center !important" >ถึง</th>
-                <th style="text-align: center !important" >ค่าสิ้นสุด</th>
-                <th style="text-align: center !important" class="two wide field ">ค่า RL</th>
-                <th style="text-align: center !important">แปลงค่า</th>
-                <th style="text-align: center !important" class="two wide field ">สี</th>
-                <th style="text-align: center !important">#</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="aligned center">1</td>
-                <td class="aligned center">
-                  <select class="ui fluid dropdown" id="selectConditionRick">
-                    <option value="ระหว่าง">ระหว่าง</option>
-                    <option value="มากกว่า">มากกว่า</option>
-                    <option value="น้อยกว่า">น้อยกว่า</option>
-                    <option value="เท่ากับ">เท่ากับ</option>
-                  </select>
-                </td>
-                <td class="aligned center">
-                  <div class="ui input">
-                    <input type="text">
-                  </div>
-                </td>
-                <td class="aligned center">-</td>
-                <td class="aligned center">
-                  <div class="ui input">
-                    <input type="text">
-                  </div>
-                </td>
-                <td class="aligned center">
-                  <select class="ui fluid dropdown" id="selectConvertValue">
-                    <option value="ต่ำมาก">ต่ำมาก</option>
-                    <option value="ต่ำ">ต่ำ</option>
-                    <option value="ปานกลาง">ปานกลาง</option>
-                    <option value="สูง">สูง</option>
-                    <option value="สูงมาก">สูงมาก</option>
-                  </select>
-                </td>
-                <td class="aligned center">
-                  <div class="ui input">
-                    <input type="text">
-                  </div>
-                </td>
-                <td class="aligned center">
-                    <select class="ui fluid dropdown" id="selectColor">
-                      <option value="ต่ำมาก">แดง</option>
-                      <option value="ต่ำ">เหลือง</option>
-                      <option value="ปานกลาง">เขียว</option>
-                    </select>
-                  </td>
-                <td class="aligned center">
-                  <button class="ui icon red mini button" type="button" (click)="delRow(i)">
-                    <i class="times icon"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-      </div>
-  </div>
-  <div class="actions">
-      <div class="ui center aligned grid">
-        <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="addRow()">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
-          <button class="ui mini primary button width-100">
-            <i class="save icon"></i>
-            บันทึก
-          </button>
-          <button class="ui mini button width-100" (click)="closeConditionRL()">
-            <i class="close icon"></i>
-            ปิด
-          </button>
-        </div>
-      </div>
-    </div>
 </div>
