--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="ui simple dropdown item" *ngIf="authService.renderByPage('InternalAudit')" style="color:White; ">
         ตรวจสอบภายใน
         <i class="dropdown icon "></i>
-        <div class="menu ">
+        <div class="menu " style="width: 340px;">
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int02')">
                 <i class="dropdown icon "></i> แบบสอบทานระบบการควบคุมภายใน
                 <div class="menu" style="margin:20px;">
