--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -6,54 +6,87 @@
             <span>Criteria</span>
         </div>
 
-        <div class="ui attached segment">
+      
 
 
-            <div class="ui form">
-                <div class="inline fields">
-                    <div class="eight wide field ">
-                        <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-                        <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
-                    </div>
-                    <div class="eight wide field ">
-                        <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-                        <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
-                    </div>
-                </div>
-
-                <div class="inline fields">
-                    <div class="eight wide field">
-                        <label class="custom-label-w-25">ผู้ประกอบการ </label>
-                        <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
-                    </div>
-                    <div class="eight wide field ">
-                        <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-                        <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="000000000000">
-                    </div>
-                </div>
-
-                <div class="inline fields">
-                    <div class="eight wide field required">
-                        <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-                        <div class="eight wide field">
-                            <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
-                                <i class="add to calendar icon"></i>
+            <form ngNativeValidate (submit)="onClickShow($event)">
+                <div class="ui attached segment">
+                    <div class="ui form">
+                        <div class="inline fields">
+                            <div class="eight wide field ">
+                                <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
+                                <select class="ui search dropdown ope04-1" name="exciseId" id="exciseId" (change)="changeExiseId()" style="width: 100% !important">
+                              <option *ngFor="let list of exciseIdArr">{{list}}</option>
+                          </select>
+                            </div>
+                            <div class="eight wide field ">
+                                <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
+                                <input type="text" name="taxNumber" id="taxNumber" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="-">
                             </div>
                         </div>
-                        <div class="eight wide field">
-                            <label>-</label>
-                            <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
-                                <i class="add to calendar icon"></i>
+    
+                        <div class="inline fields">
+                            <div class="eight wide field">
+                                <label class="custom-label-w-25">ผู้ประกอบการ </label>
+                                <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" [(ngModel)]="obj.companyName" name="companyName" id="companyName" readonly="">
+                            </div>
+                            <div class="eight wide field ">
+                                <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
+                                <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" [(ngModel)]="obj.analysNumber" name="analysNumber" id="analysNumber" readonly="">
+                            </div>
+                        </div>
+    
+                        <div class="inline fields">
+                            <div class="eight wide field">
+                                <label class="custom-label-w-25">ประเภท </label>
+                                <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
+                            </div>
+                            <div class="eight wide field ">
+                                <label class="custom-label-w-20">พิกัด</label>
+                                <input type="text" class="custom-readonly" placeholder="พิกัด" [(ngModel)]="obj.productType" name="productType" id="productType" readonly="">
+                            </div>
+                        </div>
+    
+                        <div class="inline fields">
+                            <div class="three wide field">
+                                <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+                            </div>
+                            <div class="four wide field">
+                                <div class="ui calendar" id="calendarFront" style="width:100%">
+                                    <div class="ui input left icon">
+                                        <i class="time icon"></i>
+                                        <input type="text" name="startDate" id="startDate" [(ngModel)]="obj.startDate" autocomplete="off" placeholder="MM/YYYY" [attr.required]="true">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="four wide field">
+                                <label>-</label>
+                                <div class="ui calendar" id="calendarLast" style="width:100%">
+                                    <div class="ui input left icon">
+                                        <i class="time icon"></i>
+                                        <input type="text" name="endDate" id="endDate" autocomplete="off" [(ngModel)]="obj.endDate" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+    
+                        <br>
+                        <div class="ui center aligned grid">
+                            <div class="six wide column">
+                                <button class="ui mini primary button" type="submit">
+                    <i class="file icon"></i>
+                    แสดงกระดาษทำการ
+                  </button>
+                                <button class="ui mini button" type="reset">
+                    <i class="close icon"></i>
+                    ยกเลิก
+                  </button>
                             </div>
                         </div>
                     </div>
                 </div>
-
-            </div>
-
-        </div>
+            </form>
+      
 
         <div class="ui segment">
             <div class="ui grid">
