--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
@@ -171,93 +171,7 @@
 
     <div class="ui attached segment">
       <div class="ui form">
-        <div class="inline fields ">
-          <table id="dataTable" class="ui small celled table">
-            <thead>
-              <tr>
-                <th style="text-align: center !important">ที่</th>
-                <th style="text-align: center !important">เงื่อนไข</th>
-                <th style="text-align: center !important">ค่าเริ่มต้น</th>
-                <th style="text-align: center !important"></th>
-                <th style="text-align: center !important">ค่าสิ้นสุด</th>
-                <th style="text-align: center !important">ค่า RL</th>
-                <th style="text-align: center !important">แปลงค่า</th>
-                <th style="text-align: center !important">สี</th>
-                <th style="text-align: center !important"></th>
-              </tr>
-
-            </thead>
-            <tbody>
-              <tr *ngFor="let data of datas; let i=index">
-                <td class="aligned center">{{i+1}}</td>
-                <td class="aligned center">
-
-                  <select class="ui dropdown ai" id="selectConditionRick" [attr.required]="true" [(ngModel)]="datas[i].conditionRick">
-                    <option value="ระหว่าง">ระหว่าง</option>
-                    <option value="มากกว่า">มากกว่า</option>
-                    <option value="น้อยกว่า">น้อยกว่า</option>
-                    <option value="เท่ากับ">เท่ากับ</option>
-                  </select>
-                </td>
-                <td class="aligned center">
-                  <div class="ui input">
-                    <input type="text">
-                  </div>
-                </td>
-                <td class="aligned center">-</td>
-                <td class="aligned center">
-                  <div class="ui input">
-                    <input type="text">
-                  </div>
-                </td>
-                <td class="aligned center">
-                  <select class="ui fluid dropdown" id="selectConvertValue">
-                    <option value="ต่ำมาก">ต่ำมาก</option>
-                    <option value="ต่ำ">ต่ำ</option>
-                    <option value="ปานกลาง">ปานกลาง</option>
-                    <option value="สูง">สูง</option>
-                    <option value="สูงมาก">สูงมาก</option>
-                  </select>
-                </td>
-                <td class="aligned center">
-                  <div class="ui input">
-                    <input type="text">
-                  </div>
-                </td>
-                <td class="aligned center">
-                  <select class="ui fluid dropdown" id="selectColor">
-                    <option value="ต่ำมาก">แดง</option>
-                    <option value="ต่ำ">เหลือง</option>
-                    <option value="ปานกลาง">เขียว</option>
-                  </select>
-                </td>
-                <td class="aligned center">
-                  <button class="ui icon red mini button" type="button" (click)="delRow(i)">
-                    <i class="times icon"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="inline fields "></div>
-        <div class="inline fields ">
-          <div class="sixteen wide field ">
-            <div class="six wide field "></div>
-            <button class="ui mini primary button" (click)="addRow()">
-              <i class="add icon"></i>
-              เพิ่ม
-            </button>
-            <button class="ui mini primary button width-100" (click)="saveCondition()">
-              <i class="save icon"></i>
-              บันทึก
-            </button>
-            <button class="ui mini button width-100" (click)="closeConditionRL()">
-              <i class="close icon"></i>
-              ปิด
-            </button>
-          </div>
-        </div>
+        <condition [riskId]="id" (out)="closeConditionRL($event)"></condition>
       </div>
       <br/>
 
