In09213 add data table back

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
@@ -22,7 +22,7 @@
             <div class="field">
               <select class="ui search dropdown" id="department">
                 <option value="">หน่วยงาน</option>
-                <option *ngFor="let data of deparmentList" value="{{data.value}}">{{data.label}}</option> 
+                <option *ngFor="let data of deparmentList" value="{{data.label}}">{{data.label}}</option> 
               </select>
             </div>
           </div>
