--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-4/int09-2-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-4/int09-2-1-4.component.html
@@ -12,7 +12,7 @@
       <a class="item" data-tab="tab6">สัญญายืมเงิน</a>
     </div>
     <div class="ui bottom attached tab segment active" data-tab="tab1">
-      บันทึกขออนุมัติเดินทาง
+      <app-int09-2-1-4-1></app-int09-2-1-4-1>
     </div>
     <div class="ui bottom attached tab segment" data-tab="tab2">
       บันทึกกันเงินงบประมาณ
